Updated the logging system of Basilisk

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ bmWorkSpace=./continuousBM/bmWorkSpace/
 iguanaPath=./continuousBM/iguana/
 iguanaIdPath=./continuousBM/iguana/suite.id
 testDatasetPath=/continuousBM/testDataSet/
-logFilePath=./logs/MyLogFile.log
+logFilePath=./logs/BasiliskMain.log
 configPath=./continuousBM/iguana/benchmark.config
 result=results_task_
 continuousBmPath=./continuousBM/
