Fix to tesdata not loading into tentris triple store and triple store goes into exited state.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ dockerFile=./continuousBM/bmWorkSpace/Dockerfile
 bmWorkSpace=./continuousBM/bmWorkSpace/
 iguanaPath=./continuousBM/iguana/
 iguanaIdPath=./continuousBM/iguana/suite.id
-testDatasetPath=/continuousBM/testDataSet
+testDatasetPath=./continuousBM/testDataSet
 logFilePath=./logs/BasiliskMain.log
 configPath=./continuousBM/iguana/benchmark.config
 result=results_task_
