Using the correct docker repository for virtuoso

--- a/continuousBM/DockerMetaData.yml
+++ b/continuousBM/DockerMetaData.yml
@@ -10,7 +10,7 @@ DockerMetaData:
 
 - name: "virtuoso"
   repositoryName: "tenforce/virtuoso"
-  command: "curl https://registry.hub.docker.com/v1/repositories/tenforce/virtuoso/tags"
-  port: "1111"
+  command: "curl https://https://registry.hub.docker.com/v1/repositories/openlink/virtuoso-opensource-7/tags"
+  port: "8890"
   dataset: "sp2b.nt"
   queriesFilePath: "sp2b.txt"
