--- a/app/package.json
+++ b/app/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
     "@types/c3": "^0.7.4",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "c3": "^0.7.15",
     "d3": "^5.16.0",
+    "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
