Updated the logging system of the Basilisk. And code optimization.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ name=Basilisk
 dockerFile=./continuousBM/bmWorkSpace/Dockerfile
 bmWorkSpace=./continuousBM/bmWorkSpace/
 iguanaPath=./continuousBM/iguana/
-iguanaIdPath=./continuousBM/iguana/suite.id
 testDatasetPath=./continuousBM/testDataSet
 logFilePath=./logs/BasiliskMain.log
+logDirectory=./logs/
 configPath=./continuousBM/iguana/benchmark.config
 result=results_task_
 continuousBmPath=./continuousBM/
