Added the fuseki server endpoint (to store the benchmark results) in the application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ gitBenchmarkedFileName=GitBenchmarkingAttempted.json
 dockerMetadataFileName=DockerMetadata.json
 dockerBenchmarkedFileName=DockerBenchmarkingAttempted.json
 continuousErrorLogFileName=ErrorLog.txt
+resultStoringFusekiEndPoint=http://131.234.28.165:3030/
