--- a/app/angular.json
+++ b/app/angular.json
@@ -24,7 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "src/custom-theme.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
