Added the Basilisk server endpoin in application properties to make it easy to maintain

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ dockerMetadataFileName=DockerMetadata.json
 dockerBenchmarkedFileName=DockerBenchmarkingAttempted.json
 continuousErrorLogFileName=ErrorLog.txt
 resultStoringFusekiEndPoint=http://131.234.28.165:3030/
+basiliskEndPoint=http://131.234.28.165:
