--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-version=1.0
+version=1.0.0
 name=Basilisk
 dockerFile=./continuousBM/bmWorkSpace/Dockerfile
 bmWorkSpace=./continuousBM/bmWorkSpace/
@@ -7,12 +7,10 @@ testDatasetPath=./continuousBM/testDataSet
 logFilePath=./logs/BasiliskMain.log
 logDirectory=./logs/
 configPath=./continuousBM/iguana/benchmark.config
-result=results_task_
 continuousBmPath=./continuousBM/
-gitMetadataFileName=GitMetadata.json
-gitBenchmarkedFileName=GitBenchmarkingAttempted.json
-dockerMetadataFileName=DockerMetadata.json
-dockerBenchmarkedFileName=DockerBenchmarkingAttempted.json
-continuousErrorLogFileName=ErrorLog.txt
+gitMetadataFileName=continuousBM/GitMetaData.yml
+gitBenchmarkedFileName=continuousBM/GitBenchmarkedAttempted.yml
+dockerMetadataFileName=continuousBM/DockerMetaData.yml
+dockerBenchmarkedFileName=continuousBM/DockerBenchmarkedAttempted.yml
 resultStoringFusekiEndPoint=http://131.234.28.165:3030/
 basiliskEndPoint=http://131.234.28.165:
