Implemented initial setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ dockerMetadataFileName=continuousBM/DockerMetaData.yml
 dockerBenchmarkedFileName=continuousBM/DockerBenchmarkedAttempted.yml
 resultStoringFusekiEndPoint=http://131.234.28.165:3030/
 basiliskEndPoint=http://131.234.28.165:
+iguanaJarLink=https://github.com/dice-group/IGUANA/releases/download/v3.0.0-alpha2/iguana-single-run.zip
