Added email validator

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>jena-rdfconnection</artifactId>
             <version>3.7.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
