Added authentication related data into application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ bmWorkSpace=./continuousBM/bmWorkSpace/
 iguanaPath=./continuousBM/iguana/
 testDatasetPath=./continuousBM/testDataSet
 logFilePath=./logs/BasiliskMain.log
+securityLogFilePath=./logs/BasiliskSecurity.log
 logDirectory=./logs/
 configPath=./continuousBM/iguana/benchmark.config
 continuousBmPath=./continuousBM/
@@ -15,3 +16,5 @@ dockerBenchmarkedFileName=continuousBM/DockerBenchmarkedAttempted.yml
 resultStoringFusekiEndPoint=http://131.234.28.165:3030/
 basiliskEndPoint=http://131.234.28.165:
 iguanaJarLink=https://github.com/dice-group/IGUANA/releases/download/v3.0.0-alpha2/iguana-single-run.zip
+passFile=.passwd
+passPendingFile=.passwdPending
