--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "c3": "^0.7.15",
     "d3": "^5.16.0",
     "jquery": "^3.5.1",
+    "ng5-slider": "^1.2.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
